# qaoa_tetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  stress.sh  tetris_qaoa.cpp
Benchmarks/others/: 1000_3_0.txt  1000_3_1.txt  1000_3_2.txt  1000_3_3.txt  1000_3_4.txt  1000_3_5.txt  1000_3_6.txt  1000_3_7.txt  1000_3_8.txt  1000_3_9.txt  1000_5_0.txt  1000_5_1.txt  1000_5_2.txt  1000_5_3.txt  1000_5_4.txt  1000_5_5.txt  1000_5_6.txt  1000_5_7.txt  1000_5_8.txt  1000_5_9.txt  1000_8_0.txt  1000_8_1.txt  1000_8_2.txt  1000_8_3.txt  1000_8_4.txt  1000_8_5.txt  1000_8_6.txt  1000_8_7.txt  1000_8_8.txt  1000_8_9.txt  100_10_9.txt  100_3_0.txt  100_3_1.txt  100_3_2.txt  100_3_3.txt  100_3_4.txt  100_3_5.txt  100_3_6.txt  100_3_7.txt  100_3_8.txt  (+670 more)
Benchmarks/paper/case1/: 100_1_0.json  100_1_0.txt  10_1_0.json  10_1_0.txt  110_1_0.json  110_1_0.txt  110_3_0.json  110_3_0.txt  120_1_0.json  120_1_0.txt  120_3_0.json  120_3_0.txt  200_1_0.json  200_1_0.txt  20_1_0.json  20_1_0.txt  30_1_0.json  30_1_0.txt  40_1_0.json  40_1_0.txt  50_1_0.json  50_1_0.txt  60_1_0.json  60_1_0.txt  70_1_0.json  70_1_0.txt  80_1_0.json  80_1_0.txt  90_1_0.json  90_1_0.txt
Benchmarks/paper/case2/: 50_0_0.json  50_0_0.txt  50_0_1.json  50_0_1.txt  50_0_2.json  50_0_2.txt  50_0_3.json  50_0_3.txt  50_0_4.json  50_0_4.txt  50_0_5.json  50_0_5.txt  50_0_6.json  50_0_6.txt  50_0_7.json  50_0_7.txt  50_0_8.json  50_0_8.txt  50_0_9.json  50_0_9.txt  50_1_0.json  50_1_0.txt  50_1_1.json  50_1_1.txt  50_1_2.json  50_1_2.txt  50_1_3.json  50_1_3.txt  50_1_4.json  50_1_4.txt  50_1_5.json  50_1_5.txt  50_1_6.json  50_1_6.txt  50_1_7.json  50_1_7.txt  50_1_8.json  50_1_8.txt  50_1_9.json  50_1_9.txt  (+30 more)
Benchmarks/paper/case3/: 20_5_0.txt  20_5_1.txt  20_5_2.txt  20_5_3.txt  20_5_4.txt  20_5_5.txt  20_5_6.txt  20_5_7.txt  20_5_8.txt  20_5_9.txt
Benchmarks/powerlaw/: 10_3_2_0.txt  15_3_2_0.txt
expr/: example.out  script.sh
script/: expr.cpp
src/: Graph.cpp  Graph.hpp  GraphMatch.cpp  GraphMatch.hpp  Mapping.cpp  Mapping.hpp
submodule/BiMap/: BiMap.cpp  BiMap.hpp  CMakeLists.txt  README.md
submodule/BiMap/test/: CMakeLists.txt  bimap_test.cpp
submodule/QAOAGraph/: CMakeLists.txt  Graph.cpp  Graph.hpp  README.md
submodule/QAOAGraph/test/: CMakeLists.txt  graph_test.cpp
submodule/QAOAGraph/test/graphs/: small4.txt
test/: CMakeLists.txt  cs_test.cpp  graph_test.cpp  subiso_test.cpp
test/graph/: 10_1_0.txt  fig1d.txt
